# fulcrum-score

./: FULCRUM_REPRODUCIBILITY_SPEC.md  Makefile  README.md  app.py  bassez_cell_fractions.json  fulcrum.py  fulcrum_s_scorer.py  pyproject.toml  render.yaml  zhang_cell_fractions_fulcrum.json
data/: reports.json
notebooks/: reproduce_all_results.ipynb
pipeline/: Makefile  README.md
pipeline/data/: systems_base.db
pipeline/docs/: v3_scorecard.md
pipeline/scripts/: add_missing_agents.py  add_sclc_domain.py  build_predictions_summary.py  check_drift.py  export_v3.py  formula.py  init_db.py  make_predictions_all.py  schema.sql  score_predictions.py  seed_backtested.py  seed_dellphi312.py  seed_trials.py
static/: brand.css  report.css
templates/: 404.html  about.html  base.html  contact.html  form_error.html  index.html  lead_thanks.html  service.html
templates/partials/: report_card.html
templates/reports/: dellphi-312-sclc-1l.html  energize-bladder-periop.html  expresso-melanoma-anti-pd1.html  harmony-melanoma-fianlimab.html  imbrave251-hcc-2l.html  keylynk-012-nsclc-3.html  keyvibe-006-tigit-nsclc.html  latify-atr-nsclc.html  star-221-tigit-gastric.html  tinivo-2-rcc-2l.html  volga-bladder-periop.html
