[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fulcrum-score"
version = "0.15.0"
description = "Immunotherapy response prediction framework derived from the structural theory of dissipative systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Raimo van der Klein", email = "raimo@generativegeometry.science"},
]
keywords = ["immunotherapy", "prediction", "cancer", "dissipative-systems", "biomarker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://www.generativegeometry.science/fulcrum"
Repository = "https://github.com/raimovanderklein/fulcrum-score"
Documentation = "https://www.generativegeometry.science/fulcrum"

[tool.setuptools]
py-modules = ["fulcrum"]
